// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Flex renders a Flex 1`] = `
<div>
  <div
    class="css-nute9n"
  >
    Flex
  </div>
</div>
`;

exports[`components/Flex renders a Flex with props 1`] = `
<div>
  <div
    class="css-1r72zw4"
  >
    FlexWithProps
  </div>
</div>
`;
